# dockview_dioxus

./: .gitmodules  Cargo.toml  README.md  flake.nix
.github/workflows/: errors.yml
dockview_dioxus/: Cargo.toml
dockview_dioxus/examples/: basic.rs
dockview_dioxus/src/: api.rs  config.rs  geometry.rs  lib.rs  math.rs  panel.rs  persist.rs
dockview_dioxus/src/model/: dnd.rs  gridview.rs  group.rs  mod.rs  packed.rs  serial.rs  splitview.rs
dockview_dioxus/src/render/: content.rs  drop_overlay.rs  floating.rs  grid.rs  group.rs  icons.rs  mod.rs  packed.rs
dockview_dioxus/tests/integration/: CORPUS.txt  actions.rs  corpus.rs  frng.rs  main.rs  minimize.rs  oracle.rs  sim.rs
dockview_dioxus_macros/: Cargo.toml
docs/: ARCHITECTURE.md
docs/.readme_assets/: description.md  usage.md
docs/refs/insilico/: README.md
e2e/: README.md  keybind.spec.mjs  overflow.spec.mjs  package-lock.json  package.json  playwright.config.mjs
examples/: insilico.rs  kbd_probe.mjs
examples/insilico/: balances.rs  chart.rs  chat.rs  console.rs  main.rs  market.rs  news.rs  order_book.rs  orders.rs  place_order.rs  positions.rs  trades.rs  watchlist.rs
